<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="name_gitusers">Name</string>
    <string name="avatar_gitusers">Avatar</string>
    <string name="company_gitusers">Company</string>
    <string name="repository_gitusers">Repository:</string>
    <string name="repository1_gitusers">Repository</string>
    <string name="location_gitusers">Location</string>
    <string name="followers_gitusers">Followers</string>
    <string name="following_gitusers">Following</string>
    <string name="username_gitusers">Username</string>
    <string name="repository_count_gitusers">0</string>
    <string name="github_user">Github User</string>
    <string name="github_user_detail">Github User Detail</string>
    <string name="by">by</string>
    <string name="ramafebri">ramafebri</string>
    <string name="search_gituser">Search Gituser</string>
    <string name="data_not_found">Data not found</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type: </string>
    <string name="type_name">Type Name</string>
    <string name="git_key">f4b4147f402253e043ff0cd1050bda4bdf1e029b</string>

    <string name="change_language_settings">Language Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_button">favorite button</string>
    <string name="success_delete">Success delete data</string>
    <string name="success_insert">Success insert data</string>
    <string name="fail_delete">Fail delete data</string>
    <string name="fail_insert">Fail insert data</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="alarm_9_00_am">Alarm 9.00 AM</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_message">Lets go back to application</string>
    <string name="alarm_setup">Repeating alarm set up</string>
    <string name="alarm_cancel">Repeating alarm cancel</string>
</resources>