<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".view.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_detail"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_gitusers"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_below="@id/avatar_detail" />

        <TextView
            android:id="@+id/username_detail"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="@string/username_gitusers"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/name_detail" />

        <TableLayout
            android:id="@+id/table_detail"
            android:background="#abcbff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_detail"
            android:layout_marginBottom="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/followers_gitusers"
                    android:layout_marginRight="16dp" />
                <TextView
                    android:id="@+id/followers_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/repository_count_gitusers"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/following_gitusers"
                    android:layout_marginRight="16dp" />
                <TextView
                    android:id="@+id/following_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/repository_count_gitusers"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/repository1_gitusers"
                    android:layout_marginRight="16dp" />
                <TextView
                    android:id="@+id/repository_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/repository_count_gitusers"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/company_gitusers"
                    android:layout_marginRight="16dp" />
                <TextView
                    android:id="@+id/company_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/company_gitusers"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:text="@string/location_gitusers"
                    android:layout_marginRight="16dp" />
                <TextView
                    android:id="@+id/location_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/location_gitusers"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBar_detail"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar_detail"
            android:layout_alignBottom="@+id/table_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="159dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:textAlignment="center"
            android:layout_below="@id/table_detail"
            app:tabTextColor="@android:color/white"
            android:gravity="center_horizontal" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_below="@id/tabs"/>
    </RelativeLayout>
</ScrollView>