<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_followers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <ImageView
        android:id="@+id/img_item_photo_followers"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:contentDescription="@string/avatar_gitusers"
        android:scaleType="centerCrop"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_item_name_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_item_photo_followers"
        android:textSize="16sp"
        android:textStyle="bold"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_followers"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name_gitusers" />

    <TextView
        android:id="@+id/tv_item_company_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_name_followers"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/img_item_photo_followers"
        android:ellipsize="end"
        android:maxLines="5"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_followers"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name_followers"
        />

    <TextView
        android:id="@+id/tv_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/type"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_followers"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_company_followers"
        card_view:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/tv_item_type_name_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:layout_marginStart="5dp"
        android:text="@string/type_name"
        card_view:layout_constraintBottom_toBottomOf="@+id/tv_item_type"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/tv_item_type"
        card_view:layout_constraintTop_toTopOf="@+id/tv_item_type"
        card_view:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>